Another pages done

--- a/AboutUS.html
+++ b/AboutUS.html
@@ -19,7 +19,7 @@
           <nav class="navbar">
             <div class="nav-conteiner">
               <ul class="nav-main">
-                <li> <a class="nav-item" href="AboutUS.html">Наша місія</a></li>
+                <li> <a class="nav-item" href="AboutUS.html">Про нас</a></li>
                 <li><a class="nav-item" href="Contacts.html">Контакти</a></li>
               </ul>
             </div>
@@ -74,16 +74,16 @@
                </li>
                <li class="about-list-item">
                  <div class="text-company-story">
-                   <h3>Робота</h3>
+                   <h3>Досвід</h3>
                    <p>
-                     Ми вже 2-й рік на ринку і за цей час встигли полюбитися Вам, наші дорогі клієнти, за нашу якісну
+                     Ми вже 5-й рік на ринку і за цей час встигли полюбитися Вам, наші дорогі клієнти, за нашу якісну
                      продукцію і бездоганний сервіс, про що свідчать Ваші численні позитивні відгуки.
                    </p>
                  </div>
                </li>
                <li class="about-list-item">
                  <div class="text-company-units">
-                   <h3>Наші товари</h3>
+                   <h3>Якість</h3>
                    <p>
                       Всі наші позиції виготовлені в Україні, для українців з тканин високої якості.  Ми контролюємо
                      процес закупівлі матеріалів, пошиття продукції, ми зацікавлені в хороших умовах роботи швачок і
@@ -101,7 +101,24 @@
                  </div>
 
                </li>
+             <li class="about-list-item">
+                 <div class="text-company-opportunities">
+                   <h3>Чому екологія - важливо</h3>
+                   <p>
+                      Наша планета переживає велику екологічну кризу.  Викиди парникових газів, острова сміття
+                      в Світовому океані. Фахівці вважають, що у нас є ще максимум 50 років,
+                     ʼщоб запобігти незворотні екологічні зміни.
 
+                      Перший крок - відмовитися від поліетилену і пластику;
+                     стати на шлях боротьби з "вічним" сміттям, упаковкою і пакетами;
+                     вибирати багаторазові, екологічні товари.
+
+                     Тому закликаємо всіх бути еко свідомими, підтримувати українського виробника,
+                     зменшувати свій вуглецевий слід, переходити на довговічне і екологічне!
+                   </p>
+                 </div>
+
+               </li>
 <!--             </div>-->
 <!--             <div class="text-problem-solution">-->
 <!--               <div class="about-question">-->
@@ -157,7 +174,7 @@
        </div>
        </div>
 <!--      <img class="about-us-photo" src="img/ted1.png" alt="#">-->
-     <img src="img/" alt="">
+
      </div>
    </main>
  <footer id="footer">
@@ -169,7 +186,6 @@
         <p> &copy; 2023 Мій веб-сайт. Усі права захищені.</p>
       </div>
     </div>
-
   </footer>
 </body>
 </html>
