--- a/Catalog.html
+++ b/Catalog.html
@@ -19,7 +19,7 @@
           <nav class="navbar">
             <div class="nav-conteiner">
               <ul class="nav-main">
-                <li> <a class="nav-item" href="AboutUS.html">Наша місія</a></li>
+                <li> <a class="nav-item" href="AboutUS.html">Про нас</a></li>
                 <li><a class="nav-item" href="Contacts.html">Контакти</a></li>
               </ul>
             </div>
@@ -46,51 +46,338 @@
     </header>
   </div>
  <main>
-   <h2>Каталог</h2>
-   <a href="UnitPage.html">
-     <div>
-       <img src="img/sportbags1.png" alt="sport bag" width="200">
-       <p>
-         Код:     0001 <br>
-         Ціна:    180 грн <br>
-         Назва:   Торбинка для спорту <br>
-         Розмір:  L <br>
-       </p>
-     </div>
-   </a>
-   <a href="UnitPage.html">
-     <div>
-       <img src="img/pouches1.png" alt="pouches" width="200">
-       <p>
-         Код:     0002 <br>
-         Ціна:    30/40/50 грн <br>
-         Назва:   Еко мішечки <br>
-         Розмір:  S/M/L <br>
-       </p>
-     </div>
-   </a>
-   <a href="UnitPage.html">
-     <div>
-       <img src="img/wetbags1.png" alt="wet bags" width="200">
-       <p>
-         Код:     0004 <br>
-         Ціна:    100 грн <br>
-         Назва:   Сумки для вологих речей <br>
-         Розмір:  M <br>
-       </p>
-     </div>
-   </a>
+   <section id="catalog">
+   <h1>Каталог</h1>
+   <div >
+     <div class="conteiner-catalog">
+       <ul class="catalog-list">
+         <li class="catalog-list-item">
+           <a href="UnitPage.html">
+             <img src="img/sportbags1.png" alt="sport bag" width="200">
+             <div class="catalog-list-text">
+               <p>
+                 Код:     0001 <br>
+                 Ціна:    180 грн <br>
+                 Назва:   Торбинка для спорту <br>
+                 Розмір:  L <br>
+               </p>
+             </div>
+           </a>
+           </li>
+         <li class="catalog-list-item">
+           <a href="UnitPage.html">
+             <img src="img/pouches1.png" alt="pouches" width="200">
+             <div class="catalog-list-text">
+               <p>
+                 Код:     0002 <br>
+                 Ціна:    30/40/50 грн <br>
+                 Назва:   Еко мішечки <br>
+                 Розмір:  S/M/L <br>
+               </p>
+             </div>
+           </a>
+         </li>
+         <li class="catalog-list-item">
+           <a href="UnitPage.html">
+             <img src="img/wetbags1.png" alt="wet bags" width="200">
+             <div class="catalog-list-text">
+               <p>
+                 Код:     0004 <br>
+                 Ціна:    100 грн <br>
+                 Назва:   Сумки для вологих речей <br>
+                 Розмір:  M <br>
+               </p>
+             </div>
+           </a>
+         </li>
+         <li class="catalog-list-item">
+           <a href="UnitPage.html">
+             <img src="img/sportbags1.png" alt="sport bag" width="200">
+             <div class="catalog-list-text">
+               <p>
+                 Код:     0001 <br>
+                 Ціна:    180 грн <br>
+                 Назва:   Торбинка для спорту <br>
+                 Розмір:  L <br>
+               </p>
+             </div>
+           </a>
+           </li>
+         <li class="catalog-list-item">
+           <a href="UnitPage.html">
+             <img src="img/pouches1.png" alt="pouches" width="200">
+             <div class="catalog-list-text">
+               <p>
+                 Код:     0002 <br>
+                 Ціна:    30/40/50 грн <br>
+                 Назва:   Еко мішечки <br>
+                 Розмір:  S/M/L <br>
+               </p>
+             </div>
+           </a>
+         </li>
+         <li class="catalog-list-item">
+           <a href="UnitPage.html">
+             <img src="img/sportbags1.png" alt="sport bag" width="200">
+             <div class="catalog-list-text">
+               <p>
+                 Код:     0001 <br>
+                 Ціна:    180 грн <br>
+                 Назва:   Торбинка для спорту <br>
+                 Розмір:  L <br>
+               </p>
+             </div>
+           </a>
+           </li>
+         <li class="catalog-list-item">
+           <a href="UnitPage.html">
+             <img src="img/pouches1.png" alt="pouches" width="200">
+             <div class="catalog-list-text">
+               <p>
+                 Код:     0002 <br>
+                 Ціна:    30/40/50 грн <br>
+                 Назва:   Еко мішечки <br>
+                 Розмір:  S/M/L <br>
+               </p>
+             </div>
+           </a>
+         </li>
+         <li class="catalog-list-item">
+           <a href="UnitPage.html">
+             <img src="img/wetbags1.png" alt="wet bags" width="200">
+             <div class="catalog-list-text">
+               <p>
+                 Код:     0004 <br>
+                 Ціна:    100 грн <br>
+                 Назва:   Сумки для вологих речей <br>
+                 Розмір:  M <br>
+               </p>
+             </div>
+           </a>
+         </li>
+          <li class="catalog-list-item">
+           <a href="UnitPage.html">
+             <img src="img/sportbags1.png" alt="sport bag" width="200">
+             <div class="catalog-list-text">
+               <p>
+                 Код:     0001 <br>
+                 Ціна:    180 грн <br>
+                 Назва:   Торбинка для спорту <br>
+                 Розмір:  L <br>
+               </p>
+             </div>
+           </a>
+           </li>
+         <li class="catalog-list-item">
+           <a href="UnitPage.html">
+             <img src="img/pouches1.png" alt="pouches" width="200">
+             <div class="catalog-list-text">
+               <p>
+                 Код:     0002 <br>
+                 Ціна:    30/40/50 грн <br>
+                 Назва:   Еко мішечки <br>
+                 Розмір:  S/M/L <br>
+               </p>
+             </div>
+           </a>
+         </li>
+         <li class="catalog-list-item">
+           <a href="UnitPage.html">
+             <img src="img/wetbags1.png" alt="wet bags" width="200">
+             <div class="catalog-list-text">
+               <p>
+                 Код:     0004 <br>
+                 Ціна:    100 грн <br>
+                 Назва:   Сумки для вологих речей <br>
+                 Розмір:  M <br>
+               </p>
+             </div>
+           </a>
+         </li>
+         <li class="catalog-list-item">
+           <a href="UnitPage.html">
+             <img src="img/sportbags1.png" alt="sport bag" width="200">
+             <div class="catalog-list-text">
+               <p>
+                 Код:     0001 <br>
+                 Ціна:    180 грн <br>
+                 Назва:   Торбинка для спорту <br>
+                 Розмір:  L <br>
+               </p>
+             </div>
+           </a>
+           </li>
+         <li class="catalog-list-item">
+           <a href="UnitPage.html">
+             <img src="img/pouches1.png" alt="pouches" width="200">
+             <div class="catalog-list-text">
+               <p>
+                 Код:     0002 <br>
+                 Ціна:    30/40/50 грн <br>
+                 Назва:   Еко мішечки <br>
+                 Розмір:  S/M/L <br>
+               </p>
+             </div>
+           </a>
+         </li>
+         <li class="catalog-list-item">
+           <a href="UnitPage.html">
+             <img src="img/wetbags1.png" alt="wet bags" width="200">
+             <div class="catalog-list-text">
+               <p>
+                 Код:     0004 <br>
+                 Ціна:    100 грн <br>
+                 Назва:   Сумки для вологих речей <br>
+                 Розмір:  M <br>
+               </p>
+             </div>
+           </a>
+         </li>
+          <li class="catalog-list-item">
+           <a href="UnitPage.html">
+             <img src="img/sportbags1.png" alt="sport bag" width="200">
+             <div class="catalog-list-text">
+               <p>
+                 Код:     0001 <br>
+                 Ціна:    180 грн <br>
+                 Назва:   Торбинка для спорту <br>
+                 Розмір:  L <br>
+               </p>
+             </div>
+           </a>
+           </li>
+         <li class="catalog-list-item">
+           <a href="UnitPage.html">
+             <img src="img/pouches1.png" alt="pouches" width="200">
+             <div class="catalog-list-text">
+               <p>
+                 Код:     0002 <br>
+                 Ціна:    30/40/50 грн <br>
+                 Назва:   Еко мішечки <br>
+                 Розмір:  S/M/L <br>
+               </p>
+             </div>
+           </a>
+         </li>
+         <li class="catalog-list-item">
+           <a href="UnitPage.html">
+             <img src="img/wetbags1.png" alt="wet bags" width="200">
+             <div class="catalog-list-text">
+               <p>
+                 Код:     0004 <br>
+                 Ціна:    100 грн <br>
+                 Назва:   Сумки для вологих речей <br>
+                 Розмір:  M <br>
+               </p>
+             </div>
+           </a>
+         </li>
+         <li class="catalog-list-item">
+           <a href="UnitPage.html">
+             <img src="img/sportbags1.png" alt="sport bag" width="200">
+             <div class="catalog-list-text">
+               <p>
+                 Код:     0001 <br>
+                 Ціна:    180 грн <br>
+                 Назва:   Торбинка для спорту <br>
+                 Розмір:  L <br>
+               </p>
+             </div>
+           </a>
+           </li>
+         <li class="catalog-list-item">
+           <a href="UnitPage.html">
+             <img src="img/pouches1.png" alt="pouches" width="200">
+             <div class="catalog-list-text">
+               <p>
+                 Код:     0002 <br>
+                 Ціна:    30/40/50 грн <br>
+                 Назва:   Еко мішечки <br>
+                 Розмір:  S/M/L <br>
+               </p>
+             </div>
+           </a>
+         </li>
+         <li class="catalog-list-item">
+           <a href="UnitPage.html">
+             <img src="img/wetbags1.png" alt="wet bags" width="200">
+             <div class="catalog-list-text">
+               <p>
+                 Код:     0004 <br>
+                 Ціна:    100 грн <br>
+                 Назва:   Сумки для вологих речей <br>
+                 Розмір:  M <br>
+               </p>
+             </div>
+           </a>
+         </li>
+         <li class="catalog-list-item">
+           <a href="UnitPage.html">
+             <img src="img/sportbags1.png" alt="sport bag" width="200">
+             <div class="catalog-list-text">
+               <p>
+                 Код:     0001 <br>
+                 Ціна:    180 грн <br>
+                 Назва:   Торбинка для спорту <br>
+                 Розмір:  L <br>
+               </p>
+             </div>
+           </a>
+           </li>
+         <li class="catalog-list-item">
+           <a href="UnitPage.html">
+             <img src="img/pouches1.png" alt="pouches" width="200">
+             <div class="catalog-list-text">
+               <p>
+                 Код:     0002 <br>
+                 Ціна:    30/40/50 грн <br>
+                 Назва:   Еко мішечки <br>
+                 Розмір:  S/M/L <br>
+               </p>
+             </div>
+           </a>
+         </li>
+         <li class="catalog-list-item">
+           <a href="UnitPage.html">
+             <img src="img/wetbags1.png" alt="wet bags" width="200">
+             <div class="catalog-list-text">
+               <p>
+                 Код:     0004 <br>
+                 Ціна:    100 грн <br>
+                 Назва:   Сумки для вологих речей <br>
+                 Розмір:  M <br>
+               </p>
+             </div>
+           </a>
+         </li>
+         <li class="catalog-list-item">
+           <a href="UnitPage.html">
+             <img src="img/sportbags1.png" alt="sport bag" width="200">
+             <div class="catalog-list-text">
+               <p>
+                 Код:     0001 <br>
+                 Ціна:    180 грн <br>
+                 Назва:   Торбинка для спорту <br>
+                 Розмір:  L <br>
+               </p>
+             </div>
+           </a>
+           </li>
 
-
+       </ul>
+     </div>
+   </div>
+     </section>
  </main>
- <footer>
-
-    <p>
-      Контактна інформація: <br> corgibags@gmail.com <br>
-      +380990129004 <br>
-      проспект Миру 4Б, офіс 103 <br>
-    </p>
-    <p>&copy; 2023 Мій веб-сайт. Усі права захищені.</p>
+ <footer id="footer">
+    <div class="conteiner-footer">
+      <div class="footer-copywrite">
+        <p>corgibags@gmail.com</p>
+        <p> +380990129004<p>
+        <p>проспект Миру 4Б, офіс 103<p>
+        <p> &copy; 2023 Мій веб-сайт. Усі права захищені.</p>
+      </div>
+    </div>
   </footer>
 </body>
 </html>
