--- a/ShoppingBasket.html
+++ b/ShoppingBasket.html
@@ -19,7 +19,7 @@
           <nav class="navbar">
             <div class="nav-conteiner">
               <ul class="nav-main">
-                <li> <a class="nav-item" href="AboutUS.html">Наша місія</a></li>
+                <li> <a class="nav-item" href="AboutUS.html">Про нас</a></li>
                 <li><a class="nav-item" href="Contacts.html">Контакти</a></li>
               </ul>
             </div>
@@ -46,34 +46,46 @@
     </header>
   </div>
 <main>
-  <form action="index.html" method="post">
-    <label for="name">Ім'я:</label>
-    <input type="text" id="name" name="name" required>
-    <label for="name"> Прізвище:</label>
-    <input type="text" id="surname" name="surname" required>
+  <section id="cart-section">
+  <div class="conteiner">
+    <div class="responce-box">
+      <div class="conteiner-responce">
+    <form action="index.html" method="post">
+    <div class="purchase-info">
+      <label for="name">Ім'я:</label>
+      <input type="text" id="name" name="name" required>
+      <label for="name"> Прізвище:</label>
+      <input type="text" id="surname" name="surname" required>
 
-    <label for="address">Адреса доставки:</label>
-    <input type="text" id="address" name="address" required>
-
-    <label for="payment">Тип оплати:</label>
-    <select id="payment" name="payment">
-      <option value="cash">Готівкою при отриманні</option>
-      <option value="card">Кредитна карта</option>
-      <option value="paypal">PayPal</option>
-    </select>
-
-    <button type="submit">Підтвердити замовлення</button>
+      <label for="address">Адреса доставки:</label>
+      <input type="text" id="address" name="address" required>
+    </div>
+    <div class="responce-select">
+      <label for="payment">Тип оплати:</label>
+      <select id="payment" name="payment">
+        <option value="cash">Готівкою при отриманні</option>
+        <option value="card">Кредитна карта</option>
+        <option value="paypal">PayPal</option>
+      </select>
+    </div>
+    <div class="responce-button">
+      <button type="submit">Підтвердити замовлення</button>
+    </div>
   </form>
-
+        </div>
+      </div>
+  </div>
+    </section>
 </main>
- <footer>
-
-    <p>
-      Контактна інформація: <br> corgibags@gmail.com <br>
-      +380990129004 <br>
-      проспект Миру 4Б, офіс 103 <br>
-    </p>
-    <p>&copy; 2023 Мій веб-сайт. Усі права захищені.</p>
+  <footer id="footer">
+    <div class="conteiner-footer">
+      <div class="footer-copywrite">
+        <p>corgibags@gmail.com</p>
+        <p> +380990129004<p>
+        <p>проспект Миру 4Б, офіс 103<p>
+        <p> &copy; 2023 Мій веб-сайт. Усі права захищені.</p>
+      </div>
+    </div>
   </footer>
 </body>
 </html>
