--- a/UnitPage.html
+++ b/UnitPage.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-<div>
+  <div>
      <header id="header-section">
       <div class="conteiner conteiner-header">
         <div class="header">
@@ -19,7 +19,7 @@
           <nav class="navbar">
             <div class="nav-conteiner">
               <ul class="nav-main">
-                <li> <a class="nav-item" href="AboutUS.html">Наша місія</a></li>
+                <li> <a class="nav-item" href="AboutUS.html">Про нас</a></li>
                 <li><a class="nav-item" href="Contacts.html">Контакти</a></li>
               </ul>
             </div>
@@ -45,15 +45,20 @@
       </div>
     </header>
   </div>
-  <h2> Це сторінка обраного товару</h2>
- <footer>
-
-    <p>
-      Контактна інформація: <br> corgibags@gmail.com <br>
-      +380990129004 <br>
-      проспект Миру 4Б, офіс 103 <br>
-    </p>
-    <p>&copy; 2023 Мій веб-сайт. Усі права захищені.</p>
+  <main>
+    <div class="conteiner">
+    <h2> Це сторінка обраного товару</h2>
+    </div>
+  </main>
+ <footer id="footer">
+    <div class="conteiner-footer">
+      <div class="footer-copywrite">
+        <p>corgibags@gmail.com</p>
+        <p> +380990129004<p>
+        <p>проспект Миру 4Б, офіс 103<p>
+        <p> &copy; 2023 Мій веб-сайт. Усі права захищені.</p>
+      </div>
+    </div>
   </footer>
 </body>
 </html>
