--- a/UnitPage.html
+++ b/UnitPage.html
@@ -46,9 +46,24 @@
     </header>
   </div>
   <main>
+    <section id="unit-section">
     <div class="conteiner">
     <h2> Це сторінка обраного товару</h2>
+      <div class="unit-info">
+        <div class="unit-image">
+          <p>Місце для фотографії товару</p>
+        </div>
+        <div class="unit-text">
+          <p>Опис товару</p>
+          <p>Ціна товару</p>
+          <p>І так далі інформація....</p>
+        </div>
+        <div class="unit-responce">
+          <p> Залишити відгук про товар</p>
+        </div>
+      </div>
     </div>
+    </section>
   </main>
  <footer id="footer">
     <div class="conteiner-footer">
