--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:type" content="">
   <meta property="og:url" content="">
   <meta property="og:image" content="">
-
+  <script src="js/main.js"></script>
   <link rel="manifest" href="doc/site.webmanifest">
   <link rel="apple-touch-icon" href=img/logo.png>
   <!-- Place favicon.ico in the root directory -->
