--- a/ResponcePage.html
+++ b/ResponcePage.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"  />
-
+  <script src="js/main.js"></script>
 </head>
 <body>
  <div>
