second js animation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
   <meta property="og:type" content="">
   <meta property="og:url" content="">
   <meta property="og:image" content="">
+
   <script src="js/main.js"></script>
+
+
   <link rel="manifest" href="doc/site.webmanifest">
   <link rel="apple-touch-icon" href=img/logo.png>
   <!-- Place favicon.ico in the root directory -->
@@ -66,14 +69,14 @@
         <div class="banner">
           <div class="banner-info">
             <h3 class="banner-header">Купуй тільки у нас!</h3>
-            <p class="banner-text">Найкраща якість на ринку</p>
+            <p class="banner-text">Найкраща якість на ринку :>)  </p>
             <a href="Catalog.html"> <button class="banner-btn btn-primary">До каталогу</button></a>
           </div>
         </div>
       </div>
     </section>
     <section id="news">
-      <div class="conteiner">
+      <div class="conteiner-main">
         <h2> Не пропусти! </h2>
         <div class="conteiner-news">
           <ul class="news-list">
@@ -100,7 +103,7 @@
       </div>
     </section>
     <section id="advertising">
-      <div class="conteiner">
+      <div class="conteiner-main">
         <div class="conteiner-advertising">
           <ul class="main-list">
             <li class="main-list-item">
